--- a/src/style/import.scss
+++ b/src/style/import.scss
@@ -11,3 +11,6 @@ $color-secondary: #977aaa;
 $color-grey: #4c4452;
 
 // Variables
+$spacer: 50px;
+$shadow: rgba($color-black, 0.1) 0px 7px 29px 0px;
+$transition: all 0.1s;
