Throw notification and play sound

--- a/src/components/index.module.scss
+++ b/src/components/index.module.scss
@@ -5,6 +5,7 @@
   height: 100vh;
   background-position: center center;
   background-size: cover;
+  background-color: $color-primary;
   display: flex;
   align-items: center;
   justify-content: center;
