--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -16,6 +16,11 @@ h6 {
   color: $color-white;
 }
 
+a {
+  color: $color-primary;
+  text-decoration: none;
+}
+
 .text-handwritten {
   font-family: "Pacifico", cursive;
 }
